--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
           - xgb-ci.manylinux_2_28_x86_64
           - xgb-ci.manylinux2014_x86_64
           - xgb-ci.jvm
+          - xgb-ci.jvm_gpu_build
         runner: [linux-amd64-cpu]
         include:
           - container_id: xgb-ci.manylinux2014_aarch64
@@ -171,32 +172,6 @@ jobs:
           COMMAND: upload
           KEY: build-cuda-with-rmm
 
-  build-jvm-manylinux2014:
-    name: Build libxgboost4j.so targeting gblic 2.17
-    needs: build-containers
-    runs-on:
-      - runs-on=${{ github.run_id }}
-      - runner=${{ matrix.runner }}
-    strategy:
-      matrix:
-        include:
-        - arch: aarch64
-          runner: linux-arm64-cpu
-        - arch: x86_64
-          runner: linux-amd64-cpu
-
-    steps:
-      # Restart Docker daemon so that it recognizes the ephemeral disks
-      - run: sudo systemctl restart docker
-      - uses: actions/checkout@v4
-        with:
-          submodules: "true"
-      - name: Fetch container from cache
-        run: bash ops/docker_build.sh
-        env:
-          CONTAINER_ID: xgb-ci.manylinux2014_${{ matrix.arch }}
-      - run: bash ops/pipeline/build-jvm-manylinux2014.sh ${{ matrix.arch }}
-
   build-manylinux2014:
     name: Build manylinux2014_${{ matrix.arch }} wheel
     needs: build-containers
@@ -240,6 +215,54 @@ jobs:
           CONTAINER_ID: xgb-ci.gpu_build_r_rockylinux8
       - run: bash ops/pipeline/build-gpu-rpkg.sh
 
+  build-jvm-manylinux2014:
+    name: Build libxgboost4j.so targeting glibc 2.17
+    needs: build-containers
+    runs-on:
+      - runs-on=${{ github.run_id }}
+      - runner=${{ matrix.runner }}
+    strategy:
+      matrix:
+        include:
+        - arch: aarch64
+          runner: linux-arm64-cpu
+        - arch: x86_64
+          runner: linux-amd64-cpu
+    steps:
+      # Restart Docker daemon so that it recognizes the ephemeral disks
+      - run: sudo systemctl restart docker
+      - uses: actions/checkout@v4
+        with:
+          submodules: "true"
+      - name: Fetch container from cache
+        run: bash ops/docker_build.sh
+        env:
+          CONTAINER_ID: xgb-ci.manylinux2014_${{ matrix.arch }}
+      - run: bash ops/pipeline/build-jvm-manylinux2014.sh ${{ matrix.arch }}
+
+  build-jvm-gpu:
+    name: Build libxgboost4j.so with CUDA
+    needs: build-containers
+    runs-on:
+      - runs-on=${{ github.run_id }}
+      - runner=linux-amd64-cpu
+    steps:
+      # Restart Docker daemon so that it recognizes the ephemeral disks
+      - run: sudo systemctl restart docker
+      - uses: actions/checkout@v4
+        with:
+          submodules: "true"
+      - name: Fetch container from cache
+        run: bash ops/docker_build.sh
+        env:
+          CONTAINER_ID: xgb-ci.jvm_gpu_build
+      - run: bash ops/pipeline/build-jvm-gpu.sh
+      - name: Stash files
+        run: bash ops/stash_artifacts.sh lib/libxgboost4j.so
+        env:
+          COMMAND: upload
+          KEY: build-jvm-gpu
+
   build-test-jvm-packages:
     name: Build and test JVM packages
     needs: build-containers
@@ -256,10 +279,12 @@ jobs:
         run: bash ops/docker_build.sh
         env:
           CONTAINER_ID: xgb-ci.jvm
-      - run: bash ops/pipeline/build-test-jvm-packages.sh
+      - name: Build and test JVM packages (Scala 2.12)
+        run: bash ops/pipeline/build-test-jvm-packages.sh
         env:
           SCALA_VERSION: 2.12
-      - run: bash ops/pipeline/build-test-jvm-packages.sh
+      - name: Build and test JVM packages (Scala 2.13)
+        run: bash ops/pipeline/build-test-jvm-packages.sh
         env:
           SCALA_VERSION: 2.13
 
@@ -358,3 +383,26 @@ jobs:
           KEY: ${{ matrix.artifact_from }}
       - name: Run Python tests, ${{ matrix.description }}
         run: bash ops/pipeline/test-python.sh ${{ matrix.suite }} ${{ matrix.container }}
+
+  test-jvm-packages-gpu:
+    name: Test JVM packages with CUDA
+    needs: [build-jvm-gpu]
+    runs-on:
+      - runs-on=${{ github.run_id }}
+      - runner=linux-amd64-mgpu
+    steps:
+      # Restart Docker daemon so that it recognizes the ephemeral disks
+      - run: sudo systemctl restart docker
+      - uses: actions/checkout@v4
+        with:
+          submodules: "true"
+      - name: Fetch container from cache
+        run: bash ops/docker_build.sh
+        env:
+          CONTAINER_ID: xgb-ci.jvm_gpu_build
+      - name: Unstash files
+        run: bash ops/stash_artifacts.sh lib/libxgboost4j.so
+        env:
+          COMMAND: download
+          KEY: build-jvm-gpu
+      - run: bash ops/pipeline/test-jvm-gpu.sh
