--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -209,10 +209,9 @@ jobs:
           python -m awscli s3 cp xgboost4j_${{ github.sha }}.dll `
             s3://xgboost-nightly-builds/${{ env.BRANCH_NAME }}/libxgboost4j/ `
             --acl public-read --region us-west-2
-        if: matrix.os == 'windows-latest'
-        # if: |
-        #  (github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')) &&
-        #  matrix.os == 'windows-latest'
+        if: |
+          (github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')) &&
+          matrix.os == 'windows-latest'
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_IAM_S3_UPLOADER }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_IAM_S3_UPLOADER }}
