--- a/.github/workflows/python_wheels_macos.yml
+++ b/.github/workflows/python_wheels_macos.yml
@@ -46,7 +46,7 @@ jobs:
       - name: Build wheels
         run: bash ops/pipeline/build-python-wheels-macos.sh ${{ matrix.platform_id }} ${{ github.sha }}
       - name: Upload Python wheel
-        # if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')
+        if: github.ref == 'refs/heads/master' || contains(github.ref, 'refs/heads/release_')
         run: |
           python -m pip install awscli
           python -m awscli s3 cp wheelhouse/*.whl s3://xgboost-nightly-builds/${{ env.BRANCH_NAME }}/ --acl public-read --region us-west-2
