Remove unneeded matrix; set max-parallel

--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -21,6 +21,7 @@ jobs:
       - runs-on=${{ github.run_id }}
       - runner=${{ matrix.runner }}
     strategy:
+      max-parallel: 2
       matrix:
         container_id:
           - xgb-ci.manylinux2014_x86_64
