--- a/.github/workflows/jvm_tests.yml
+++ b/.github/workflows/jvm_tests.yml
@@ -88,7 +88,7 @@ jobs:
           CONTAINER_ID: xgb-ci.jvm_gpu_build
       - run: bash ops/pipeline/build-jvm-gpu.sh
       - name: Stash files
-        run: bash ops/stash_artifacts.sh lib/libxgboost4j.so
+        run: bash ops/pipeline/stash-artifacts.sh lib/libxgboost4j.so
         env:
           COMMAND: upload
           KEY: build-jvm-gpu
@@ -132,7 +132,7 @@ jobs:
         env:
           CONTAINER_ID: xgb-ci.jvm_gpu_build
       - name: Unstash files
-        run: bash ops/stash_artifacts.sh lib/libxgboost4j.so
+        run: bash ops/pipeline/stash-artifacts.sh lib/libxgboost4j.so
         env:
           COMMAND: download
           KEY: build-jvm-gpu
@@ -163,7 +163,7 @@ jobs:
         env:
           SCALA_VERSION: 2.13
       - name: Stash files
-        run: bash ops/stash_artifacts.sh lib/libxgboost4j.so
+        run: bash ops/pipeline/stash-artifacts.sh lib/libxgboost4j.so
         env:
           COMMAND: upload
           KEY: build-test-jvm-packages
@@ -239,7 +239,7 @@ jobs:
         env:
           CONTAINER_ID: xgb-ci.jvm_gpu_build
       - name: Unstash files
-        run: bash ops/stash_artifacts.sh lib/libxgboost4j.so
+        run: bash ops/pipeline/stash-artifacts.sh lib/libxgboost4j.so
         env:
           COMMAND: download
           KEY: build-jvm-gpu
@@ -273,7 +273,7 @@ jobs:
           CONTAINER_ID: ${{ matrix.container_id }}
       - name: Unstash files
         run: |
-          bash ops/stash_artifacts.sh lib/libxgboost4j.so
+          bash ops/pipeline/stash-artifacts.sh lib/libxgboost4j.so
           ls -lh lib/libxgboost4j.so
         env:
           COMMAND: download
